--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.0",
