--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "enzyme-adapter-react-16": "^1.15.6",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "react-transition-group": "^4.4.0",
     "web-vitals": "^2.1.0"
   },
