--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
-    "jest-environment-jsdom": "^28.1.3"
+    "jest-environment-jsdom": "^28.1.3",
+    "msw": "^0.44.2"
   },
   "babel": {
     "presets": [
