--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
+    "cypress": "^10.5.0",
     "jest-environment-jsdom": "^28.1.3",
     "msw": "^0.44.2"
   },
